# Tales

./: .gitignore  Cargo.toml  README.md  lint_check.txt  test_err.txt
docs/: README.md
src/: board.rs  book.rs  eval.rs  main.rs  movegen.rs  tt.rs  uci.rs
src/board/: attacks.rs  bitboard.rs  distance.rs  magic.rs  masks.rs  mod.rs  moves.rs  position.rs  types.rs  zobrist.rs
src/book/: external.rs  internal.rs  mod.rs  polyglot.rs
src/eval/: endgame.rs  eval_data.rs  global_pst.rs  king_safety.rs  material.rs  mod.rs  params.rs  passers.rs  patterns.rs  pawn_hash.rs  pawns.rs  pieces.rs  pst.rs  threats.rs
src/movegen/: generate.rs  mod.rs  movelist.rs  see.rs
src/search/: alphabeta.rs  mod.rs  ordering.rs  quiesce.rs  threads.rs  uci_info.rs
src/tt/: mod.rs
src/uci/: bench.rs  epd.rs  go.rs  mod.rs  options.rs  time_mgmt.rs
