[package]
name = "tales"
version = "1.1.0-alpha"
edition = "2024"
rust-version = "1.94.1"
authors = ["Andre MARTINS"]
description = "Tales — UCI chess engine written in Rust"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

[profile.profiling]
inherits = "release"
debug = true
