[package]
name = "tales"
version = "1.3.0"
edition = "2024"
rust-version = "1.95.0"
authors = ["Andre MARTINS"]
description = "Tales — UCI chess engine written in Rust"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

[profile.profiling]
inherits = "release"
debug = true
